[UPDATE] Sentence Changes

--- a/design_docs/design_doc.tex
+++ b/design_docs/design_doc.tex
@@ -1,6 +1,5 @@
 \documentclass{article}
 \usepackage{hyperref}
-\usepackage{changepage}
 \title{acm.mst.edu Design Documentation}
 \author{Kevin Schoonover}
 \date{\today}
@@ -21,20 +20,20 @@ Firstly, the majority of the System Administrator job was updating
 the old ACM-General website by manually uploading photos and inputting them into
 a WordPress site and then creating WordPress events; I personally believed that we
 could create a more personalized and intelligent approach which would allow these
-repetitive tasks to be more easily automated. Secondly, I wanted to create a 
-more succinct and refined user experience for everyone who interacted with the 
-website thereby increasing user productivity and activity within ACM. 
-Lastly, I believed that the website was capable of so much more than a 
-'attractive' flier and an event share. Features like automatically managing SIGs, 
+repetitive tasks to be more easily automated. Secondly, I wanted to create a
+more succinct and refined user experience for everyone who interacted with the
+website thereby increasing user productivity and activity within ACM.
+Lastly, I believed that the website was capable of so much more than a
+'attractive' flier and an event share. Features like automatically managing SIGs,
 allowing for developer interaction through an API, and much more would allow
-for ACM to grow in a more extensive and intelligent way. All of this and 
+for ACM to grow in a more extensive and intelligent way. All of this and
 more will be discussed throughout this Design documentation.
 
 \subsection{Tools / Prerequisite Knowledge}
-Some tools, frameworks, and languages one should attempt to familiarize 
+Some tools, frameworks, and languages one should attempt to familiarize
 themselves with to jump head-first into the project:
 \begin{itemize}
-    \item Django (\url{https://docs.djangoproject.com/en/1.11/}) - Web 
+    \item Django (\url{https://docs.djangoproject.com/en/1.11/}) - Web
           Framework and back-end which runs all of the webpage interaction.
     \item Django REST Framework (\url{http://www.django-rest-framework.org/}) -
           A nice library which helps to automatically configure and manage the
@@ -57,29 +56,29 @@ themselves with to jump head-first into the project:
 \section{Design}
 \subsection{Web API}
 In order to improve overall modularity and extensibility, a RESTful Web API
-exposing the majority, if not all, of the Django models must be implemented. 
+exposing the majority, if not all, of the Django models must be implemented.
 
 \subsubsection{Schema}
-The URL scheme for the web-api will be as follows: 
-\\ \texttt{http://www.foobar.com/web-api/<api\_version>/<model\_name>/(model\_pk)}
-\\ 
+The URL scheme for the web-api will be as follows:
+\\ \texttt{/web-api/<api\_version>/<model\_name>/(model\_pk)}
+\\
 \\
 \textbf{api\_version} (Required): Whatever version of the API that is used. All
 previous versions of the API will be reserved (unless expressly deprecated to
 all users of the API) in order to preserve backwards compatibility of software
-which may be legacy. The most current version will be named \texttt{latest}
+which may be legacy. The most current version will be named \texttt{latest}.
 % Full Indent
 \\
 \textbf{model\_name} (Required): The name of the model which the user is
-attempting to access with the API call with every character lowercase. 
+attempting to access with the API call with every character lowercase.
 % Full Indent
 \\
 \textbf{model\_pk} (Optional): The specific primary key of the model instance
 the user is attempting to access. % Full Indent
 
 \subsubsection{Permissions}
-Any developer wishing to gain access to the API will need to be registered on 
-the site. After the user log-in, they can visit the route 
+Any developer wishing to gain access to the API will need to be registered on
+the site. After the user log-in, they can visit the route
 \textbf{/developer/api\_keys} which displays a hierarchy of all models and
 permissions (GET (all), GET (specific primary key), POST, PUT, DELETE) for each
 model. The user can then request any level of access they require (including
@@ -108,7 +107,7 @@ POST request.
 \subsection{External Developers}
 \subsection{Permissions}
 \subsubsection{Permissions ideas}
-Brainstorming of all permission ideas necessary for the website. Section will be 
+Brainstorming of all permission ideas necessary for the website. Section will be
 refined/removed later.
 \begin{itemize}
     \item Manage API Keys
@@ -118,7 +117,7 @@ refined/removed later.
         \item GET all models
         \item DELETE specific instance
         \item Create new instance
-        \item Modify existing instance 
+        \item Modify existing instance
     \end{itemize}
 
     \item Per-SIG
@@ -132,7 +131,7 @@ refined/removed later.
     \item Per-view (need to have a better way of modulating this)
     \begin{itemize}
         \item Can GET
-        \item Can POST 
+        \item Can POST
     \end{itemize}
 
 
