--- a/design_docs/design_doc.tex
+++ b/design_docs/design_doc.tex
@@ -319,16 +319,16 @@ The release cycle up to the 2018 Semester:
     \item Event Creation
     \item ACM Membership
 \end{itemize}
-\textbf{Release 0.6.0 - 2017.08.25 - 2017.09.29}
+\textbf{Release 0.6.0: 2017.08.25 - 2017.09.29}
 \begin{itemize}
     \item Sponsorship - Why Sponsor Us? and Online Sponsorship Payment
     \item Documentation updated to current state
 \end{itemize}
-\textbf{Release 0.7.0 - 2017.09.29 - 2017.11.03}
+\textbf{Release 0.7.0: 2017.09.29 - 2017.11.03}
 \begin{itemize}
     \item Event Management and Event Participation 
 \end{itemize}
-\textbf{Release 1.0.0 - 2017.11.03 - 2018.12.08}
+\textbf{Release 1.0.0: 2017.11.03 - 2017.12.31}
 \begin{itemize}
     \item SIG homepage 
     \item User homepage
